--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js & npx peerjs --port $PORT --key peerjs --path /",
+    "start": "node src/index.js & npx peerjs --port 9000 --key peerjs --path /",
     "dev": "npx nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
